[package]
name = "sui_rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
futures = "0.3.23"
tokio = { version = "1.24.1", features = ["full"] }
dirs = "4.0.0"
sui-sdk = { path = "../../sui_framework/crates/sui-sdk" }
sui-keys =  { path = "../../sui_framework/crates/sui-keys" }
sui-types = { path = "../../sui_framework/crates/sui-types" }